--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "webdriver:start": "webdriver-manager start",
     "lint": "tsconfig-lint",
     "pree2e": "npm run webdriver:update -- --standalone",
-    "e2e": "ts-node node_modules/.bin/protractor --specs src/**/**.e2e.ts,src/**/*.e2e.ts",
+    "e2e": "ts-node node_modules/.bin/protractor protractor.conf.js",
     "e2e:live": "protractor --elementExplorer",
     "test": "karma start",
     "ci": "npm run e2e && npm run test",
@@ -76,6 +76,7 @@
     "karma-webpack": "1.7.0",
     "ncp": "^2.0.0",
     "node-red": "^0.13.1",
+    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
     "phantomjs-polyfill": "0.0.1",
     "protractor": "^3.0.0",
@@ -85,6 +86,7 @@
     "remap-istanbul": "^0.5.1",
     "replace": "^0.3.0",
     "rimraf": "^2.4.4",
+    "sass-loader": "^3.1.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
     "ts-helper": "0.0.1",
