--- a/package.json
+++ b/package.json
@@ -1,117 +1,131 @@
 {
-  "name": "angular2-webpack-starter",
-  "version": "0.0.0",
-  "description": "An Angular 2 Webpack Starter kit featuring Angular 2 (Router, Http, Forms, Services, Tests, E2E, Coverage), Karma, Protractor, Jasmine, Istanbul, TypeScript, and Webpack by AngularClass",
-  "author": "Patrick Stapleton <patrick@angularclass.com>",
-  "homepage": "https://github.com/angularclass/angular2-webpack-starter",
+  "name": "protractor-gherkin-cucumberjs-angular2",
+  "version": "1.0.0",
+  "description": "",
+  "author": "Sam Vloeberghs <sam@kwerri.be>",
+  "homepage": "https://github.com/samvloeberghs/protractor-gherkin-cucumberjs-angular2",
   "license": "MIT",
   "scripts": {
-    "clean": "npm cache clean && rimraf node_modules doc typings coverage dist",
-    "clean:dist": "rimraf dist",
+    "rimraf": "rimraf",
+    "tslint": "tslint",
+    "typedoc": "typedoc",
+    "typings": "typings",
+    "webpack": "webpack",
+    "webpack-dev-server": "webpack-dev-server",
+    "webdriver-manager": "webdriver-manager",
+    "protractor": "protractor",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage dist",
+    "clean:dist": "npm run rimraf -- dist",
     "preclean:install": "npm run clean",
     "clean:install": "npm set progress=false && npm install",
     "preclean:start": "npm run clean",
     "clean:start": "npm start",
     "watch": "npm run watch:dev",
-    "watch:dev": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
+    "watch:dev": "npm run build:dev -- --watch",
+    "watch:dev:hmr": "npm run watch:dev -- --hot",
     "watch:test": "npm run test -- --auto-watch --no-single-run",
-    "watch:prod": "webpack --watch --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
+    "watch:prod": "npm run build:prod -- --watch",
     "build": "npm run build:dev",
     "prebuild:dev": "npm run clean:dist",
-    "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
+    "build:dev": "webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
     "prebuild:prod": "npm run clean:dist",
-    "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
+    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --colors --display-error-details --display-cached --bail",
     "server": "npm run server:dev",
-    "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached  --content-base src/",
+    "server:dev": "webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --content-base src/",
+    "server:dev:hmr": "npm run server:dev -- --hot",
     "server:prod": "http-server dist --cors",
-    "webdriver:update": "webdriver-manager update",
-    "webdriver:start": "webdriver-manager start",
-    "lint": "tsconfig-lint",
+    "webdriver:update": "npm run webdriver-manager update",
+    "webdriver:start": "npm run webdriver-manager start",
+    "lint": "npm run tslint 'src/**/*.ts'",
     "pree2e": "npm run webdriver:update -- --standalone",
-    "e2e": "ts-node node_modules/.bin/protractor protractor.conf.js",
-    "e2e:live": "protractor --elementExplorer",
-    "test": "karma start",
+    "e2e": "npm run protractor",
+    "e2e:live": "npm run e2e -- --elementExplorer",
+    "test": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "ci": "npm run e2e && npm run test",
-    "docs": "typedoc --options typedoc.json --exclude **/*.spec.ts ./src/",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "start": "npm run server:dev",
-    "fix:rx": "node_modules/.bin/replace '5.0.0-beta.0' '5.0.0-beta.1' node_modules -r --exclude=node_modules/rxjs",
-    "fix:ng2-patch": "node_modules/.bin/ncp src/.ng2-patch node_modules",
-    "fix:ng2-clean": "node_modules/.bin/rimraf node_modules/angular2/manual_typings node_modules/angular2/typings node_modules/angular2/bundles/typings",
-    "fix:ng2": "npm run fix:ng2-clean && npm run fix:ng2-patch && npm run fix:rx",
-    "pretypings-install": "npm run fix:ng2",
-    "typings-install": "typings install",
-    "postinstall": "npm run typings-install",
-    "api": "node node_modules/node-red/red.js -s api-stub/settings.js -v"
+    "start:hmr": "npm run server:dev:hmr",
+    "postinstall": "npm run typings -- install",
+    "preversion": "npm test",
+    "version": "npm run build",
+    "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.1",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "es7-reflect-metadata": "^1.5.5",
-    "rxjs": "5.0.0-beta.1",
-    "zone.js": "0.5.10"
+    "@angular2-material/button": "^2.0.0-alpha.1",
+    "@angular2-material/card": "^2.0.0-alpha.1",
+    "@angular2-material/checkbox": "^2.0.0-alpha.1",
+    "@angular2-material/core": "^2.0.0-alpha.1",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.1",
+    "@angular2-material/radio": "^2.0.0-alpha.1",
+    "@angular2-material/sidenav": "^2.0.0-alpha.1",
+    "@angular2-material/toolbar": "^2.0.0-alpha.1",
+    "angular2": "2.0.0-beta.13",
+    "core-js": "^2.1.5",
+    "rxjs": "5.0.0-beta.4",
+    "zone.js": "0.6.6"
   },
   "devDependencies": {
+    "angular2-hmr": "~0.5.4",
+    "awesome-typescript-loader": "~0.16.2",
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.2.0",
+    "chai-as-promised": "^5.3.0",
+    "codelyzer": "0.0.12",
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.0",
-    "cucumber": "^0.9.4",
+    "css-loader": "^0.23.1",
+    "cucumber": "^0.10.1",
+    "es6-promise": "^3.1.2",
     "es6-promise-loader": "^1.0.1",
-    "exports-loader": "^0.6.2",
+    "es6-shim": "^0.35.0",
+    "es7-reflect-metadata": "^1.6.0",
+    "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
-    "file-loader": "^0.8.4",
-    "html-webpack-plugin": "^1.7.0",
-    "http-server": "^0.8.5",
-    "imports-loader": "^0.6.4",
-    "istanbul-instrumenter-loader": "^0.1.3",
-    "json-loader": "^0.5.3",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-coverage": "^0.5.3",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-sourcemap-loader": "^0.3.6",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.9.0",
+    "http-server": "^0.9.0",
+    "imports-loader": "^0.6.5",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.5",
+    "karma-jasmine": "^0.3.8",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
-    "ncp": "^2.0.0",
-    "node-red": "^0.13.1",
-    "node-sass": "^3.4.2",
-    "phantomjs": "^1.9.18",
-    "phantomjs-polyfill": "0.0.1",
-    "protractor": "^3.0.0",
-    "protractor-cucumber-framework": "^0.3.3",
+    "parse5": "^1.3.2",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.6",
+    "protractor": "^3.1.1",
+    "protractor-cucumber-framework": "^0.4.0",
     "raw-loader": "0.5.1",
-    "reflect-metadata": "0.1.2",
     "remap-istanbul": "^0.5.1",
-    "replace": "^0.3.0",
-    "rimraf": "^2.4.4",
-    "sass-loader": "^3.1.2",
+    "rimraf": "^2.5.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
     "ts-helper": "0.0.1",
-    "ts-loader": "^0.8.0",
-    "ts-node": "^0.5.5",
-    "tsconfig-lint": "^0.5.0",
-    "tslint": "^3.2.0",
-    "tslint-loader": "^2.1.0",
+    "ts-node": "^0.7.0",
+    "tslint": "^3.6.0",
+    "tslint-loader": "^2.1.3",
     "typedoc": "^0.3.12",
-    "typescript": "^1.7.5",
-    "typings": "^0.6.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-md5-hash": "0.0.4"
+    "typescript": "~1.8.9",
+    "typings": "^0.7.9",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-merge": "^0.8.4"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/angularclass/angular2-webpack-starter.git"
+    "url": "https://github.com/samvloeberghs/protractor-gherkin-cucumberjs-angular2.git"
   },
   "bugs": {
-    "url": "https://github.com/angularclass/angular2-webpack-starter/issues"
+    "url": "https://github.com/samvloeberghs/protractor-gherkin-cucumberjs-angular2/issues"
   },
   "engines": {
-    "node": ">= 4.2.1 <= 5",
+    "node": ">= 4.2.1",
     "npm": ">= 3"
   }
 }
