--- a/package.json
+++ b/package.json
@@ -61,12 +61,19 @@
     "@angular2-material/toolbar": "^2.0.0-alpha.1",
     "angular2": "2.0.0-beta.13",
     "core-js": "^2.1.5",
+    "jquery": "^2.2.2",
+    "lodash": "^4.7.0",
+    "node-red": "^0.13.4",
+    "node-sass": "^3.4.2",
     "rxjs": "5.0.0-beta.4",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
     "angular2-hmr": "~0.5.4",
+    "autoprefixer": "^6.3.6",
     "awesome-typescript-loader": "~0.16.2",
+    "bootstrap-loader": "^1.0.10",
+    "bootstrap-sass": "^3.3.6",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "codelyzer": "0.0.12",
@@ -97,6 +104,7 @@
     "parse5": "^1.3.2",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.6",
+    "postcss-loader": "^0.8.2",
     "protractor": "^3.1.1",
     "protractor-cucumber-framework": "^0.4.0",
     "raw-loader": "0.5.1",
@@ -104,6 +112,7 @@
     "rimraf": "^2.5.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
+    "to-string-loader": "^1.1.3",
     "ts-helper": "0.0.1",
     "ts-node": "^0.7.0",
     "tslint": "^3.6.0",
