--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "lodash": "^4.7.0",
     "node-red": "^0.13.4",
     "node-sass": "^3.4.2",
-    "rxjs": "5.0.0-beta.4",
+    "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
@@ -78,7 +78,7 @@
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
-    "cucumber": "^0.10.1",
+    "cucumber": "^0.9.1",
     "es6-promise": "^3.1.2",
     "es6-promise-loader": "^1.0.1",
     "es6-shim": "^0.35.0",
@@ -108,6 +108,7 @@
     "raw-loader": "0.5.1",
     "remap-istanbul": "^0.5.1",
     "rimraf": "^2.5.2",
+    "sass-loader": "^3.1.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
     "to-string-loader": "^1.1.3",
