--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
     "webdriver-manager": "webdriver-manager",
-    "protractor": "protractor",
+    "protractor": "protractor protractor.conf.js",
+    "protractor:saucelabs": "protractor protractor.saucelabs.conf.js",
     "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage dist",
     "clean:dist": "npm run rimraf -- dist",
     "preclean:install": "npm run clean",
@@ -39,6 +40,7 @@
     "lint": "npm run tslint 'src/**/*.ts'",
     "pree2e": "npm run webdriver:update -- --standalone",
     "e2e": "npm run protractor",
+    "e2e:saucelabs": "npm run protractor:saucelabs",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "test": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "ci": "npm run e2e && npm run test",
