--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
     "cucumber": "^0.9.1",
+    "cucumber-tsflow": "^1.1.0",
     "es6-promise": "^3.1.2",
     "es6-promise-loader": "^1.0.1",
     "es6-shim": "^0.35.0",
