--- a/package.json
+++ b/package.json
@@ -53,28 +53,35 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular2-material/button": "^2.0.0-alpha.1",
-    "@angular2-material/card": "^2.0.0-alpha.1",
-    "@angular2-material/checkbox": "^2.0.0-alpha.1",
-    "@angular2-material/core": "^2.0.0-alpha.1",
-    "@angular2-material/progress-circle": "^2.0.0-alpha.1",
-    "@angular2-material/radio": "^2.0.0-alpha.1",
-    "@angular2-material/sidenav": "^2.0.0-alpha.1",
-    "@angular2-material/toolbar": "^2.0.0-alpha.1",
-    "angular2": "2.0.0-beta.13",
+    "@angular2-material/button": "^2.0.0-alpha.6",
+    "@angular2-material/card": "^2.0.0-alpha.6",
+    "@angular2-material/checkbox": "^2.0.0-alpha.6",
+    "@angular2-material/core": "^2.0.0-alpha.6",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.6",
+    "@angular2-material/radio": "^2.0.0-alpha.6",
+    "@angular2-material/sidenav": "^2.0.0-alpha.6",
+    "@angular2-material/toolbar": "^2.0.0-alpha.6",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/forms": "0.2.0",
     "core-js": "^2.1.5",
     "jquery": "^2.2.2",
     "lodash": "^4.7.0",
-    "rxjs": "5.0.0-beta.2",
+    "rxjs": "5.0.0-beta.6",
     "zone.js": "0.6.6"
   },
   "devDependencies": {
-    "angular2-hmr": "~0.5.4",
+    "angular2-hmr": "^0.8.1",
     "autoprefixer": "^6.3.6",
     "awesome-typescript-loader": "~0.16.2",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "codelyzer": "0.0.12",
+    "codelyzer": "0.0.25",
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
