--- a/package.json
+++ b/package.json
@@ -65,10 +65,11 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/core": "2.0.0-rc.4",
     "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
     "@angular/http": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/forms": "0.2.0",
     "core-js": "^2.1.5",
     "jquery": "^2.2.2",
     "lodash": "^4.7.0",
