--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "author": "Sam Vloeberghs <sam@kwerri.be>",
-  "contributors": ["Dennis Jaamann <dennis@jman-consulting.be>"],
+  "contributors": [
+    "Dennis Jaamann <dennis@jman-consulting.be>"
+  ],
   "homepage": "https://github.com/samvloeberghs/protractor-gherkin-cucumberjs-angular2",
   "license": "MIT",
   "scripts": {
@@ -54,21 +56,19 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
     "core-js": "^2.1.5",
     "jquery": "^2.2.2",
     "lodash": "^4.7.0",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.6"
+    "rxjs": "5.0.0-beta.11",
+    "zone.js": "0.6.17"
   },
   "devDependencies": {
     "angular2-hmr": "^0.8.1",
