--- a/package.json
+++ b/package.json
@@ -56,19 +56,19 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
     "core-js": "^2.1.5",
     "jquery": "^2.2.2",
     "lodash": "^4.7.0",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "0.6.17"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.23"
   },
   "devDependencies": {
     "angular2-hmr": "^0.8.1",
