--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "rimraf": "rimraf",
     "tslint": "tslint",
     "typedoc": "typedoc",
-    "typings": "typings",
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
     "webdriver-manager": "webdriver-manager",
     "protractor": "protractor protractor.conf.js",
     "protractor:saucelabs": "protractor protractor.saucelabs.conf.js",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage dist",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
     "clean:dist": "npm run rimraf -- dist",
     "preclean:install": "npm run clean",
     "clean:install": "npm set progress=false && npm install",
@@ -50,7 +49,6 @@
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "start": "npm run server:dev",
     "start:hmr": "npm run server:dev:hmr",
-    "postinstall": "npm run typings -- install",
     "preversion": "npm test",
     "version": "npm run build",
     "postversion": "git push && git push --tags"
@@ -64,28 +62,29 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
-    "core-js": "^2.1.5",
+    "core-js": "^2.4.1",
     "jquery": "^2.2.2",
     "lodash": "^4.7.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.23"
   },
   "devDependencies": {
+    "@types/cucumber": "0.0.31",
+    "@types/hammerjs": "^2.0.32",
+    "@types/jasmine": "^2.2.33",
+    "@types/node": "^6.0.38",
+    "@types/webpack": "^1.12.34",
     "angular2-hmr": "^0.8.1",
     "autoprefixer": "^6.3.6",
-    "awesome-typescript-loader": "~0.16.2",
+    "awesome-typescript-loader": "~2.2.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "codelyzer": "0.0.25",
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
-    "cucumber": "^1.2.1",
-    "cucumber-tsflow": "^1.1.1",
-    "es6-promise": "^3.1.2",
-    "es6-promise-loader": "^1.0.1",
-    "es6-shim": "^0.35.0",
-    "es7-reflect-metadata": "^1.6.0",
+    "cucumber": "^1.3.0",
+    "cucumber-tsflow": "^1.2.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.8.5",
@@ -107,7 +106,7 @@
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "^2.1.6",
     "postcss-loader": "^0.8.2",
-    "protractor": "^4.0.0",
+    "protractor": "^4.0.8",
     "protractor-cucumber-framework": "^0.6.0",
     "raw-loader": "0.5.1",
     "remap-istanbul": "^0.5.1",
@@ -121,8 +120,8 @@
     "tslint": "^3.6.0",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.3.12",
-    "typescript": "~1.8.10",
-    "typings": "^0.7.9",
+    "typescript": "~2.0.2",
+    "typings": "1.3.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
