--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "awesome-typescript-loader": "~2.2.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "codelyzer": "0.0.25",
+    "codelyzer": "^1.0.0-beta.0",
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
