--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "contributors": [
     "Dennis Jaamann <dennis@jman-consulting.be>"
   ],
+  "main": "main.js",
   "homepage": "https://github.com/samvloeberghs/protractor-gherkin-cucumberjs-angular2",
   "license": "MIT",
   "scripts": {
@@ -17,6 +18,7 @@
     "webdriver-manager": "webdriver-manager",
     "protractor": "protractor protractor.conf.js",
     "protractor:saucelabs": "protractor protractor.saucelabs.conf.js",
+    "protractor:electron": "protractor protractor.electron.conf.js",
     "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
     "clean:dist": "npm run rimraf -- dist",
     "preclean:install": "npm run clean",
@@ -43,6 +45,7 @@
     "pree2e": "npm run webdriver:update -- --standalone",
     "e2e": "npm run protractor",
     "e2e:saucelabs": "npm run protractor:saucelabs",
+    "e2e:electron": "npm run protractor:electron",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "test": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "ci": "npm run e2e && npm run test",
@@ -54,14 +57,14 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "2.1.0",
+    "@angular/compiler": "2.1.0",
+    "@angular/core": "2.1.0",
+    "@angular/forms": "2.1.0",
+    "@angular/http": "2.1.0",
+    "@angular/platform-browser": "2.1.0",
+    "@angular/platform-browser-dynamic": "2.1.0",
+    "@angular/router": "3.1.0",
     "core-js": "^2.4.1",
     "jquery": "^2.2.2",
     "lodash": "^4.7.0",
@@ -80,12 +83,15 @@
     "awesome-typescript-loader": "~2.2.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "codelyzer": "0.0.25",
+    "codelyzer": "1.0.0-beta.2",
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
     "cucumber": "^1.3.0",
     "cucumber-tsflow": "^1.2.1",
+    "electron": "^1.4.3",
+    "electron-chromedriver": "^1.4.0",
+    "electron-prebuilt": "^1.4.3",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.8.5",
