--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
     "webdriver-manager": "webdriver-manager",
-
     "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
     "clean:dist": "npm run rimraf -- dist",
     "preclean:install": "npm run clean",
@@ -40,7 +39,6 @@
     "test": "node --max-old-space-size=4096 node_modules/karma/bin/karma start",
     "ci": "npm run e2e && npm run test",
     "start": "npm run server:dev",
-
     "webdriver:update": "npm run webdriver-manager update",
     "webdriver:start": "npm run webdriver-manager start",
     "protractor": "npm run e2e",
@@ -124,6 +122,7 @@
     "angular2-hmr": "^0.8.1",
     "autoprefixer": "^6.3.6",
     "awesome-typescript-loader": "~2.2.1",
+    "better-npm-run": "0.0.12",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "codelyzer": "1.0.0-beta.2",
@@ -151,6 +150,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.7.0",
+    "merge": "^1.2.0",
     "node-sass": "^3.4.2",
     "parse5": "^1.3.2",
     "phantomjs-polyfill": "0.0.2",
