--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "e2e:cucumber": "better-npm-run e2e:cucumber:local",
     "e2e:cucumber:local": "better-npm-run e2e:cucumber:local",
     "e2e:cucumber:electron": "better-npm-run e2e:cucumber:electron",
-    "e2e:cucumber:saucelabs": "better-npm-run e2e:cucumber:saucelabs"
+    "e2e:cucumber:saucelabs": "better-npm-run e2e:cucumber:saucelabs",
+    "e2e:hackages": "protractor protractor.hackages.conf.js"
   },
   "betterScripts": {
     "e2e:basic:local": {
