--- a/package.json
+++ b/package.json
@@ -114,79 +114,79 @@
     "@angular/platform-browser": "2.4.7",
     "@angular/platform-browser-dynamic": "2.4.7",
     "@angular/router": "3.1.0",
-    "core-js": "^2.4.1",
-    "jquery": "^2.2.2",
-    "lodash": "^4.7.0",
+    "core-js": "2.4.1",
+    "jquery": "2.2.2",
+    "lodash": "4.7.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "0.6.23"
   },
   "devDependencies": {
     "@types/cucumber": "0.0.31",
     "@types/es6-promise": "0.0.32",
-    "@types/hammerjs": "^2.0.32",
-    "@types/jasmine": "^2.2.33",
-    "@types/node": "^6.0.38",
+    "@types/hammerjs": "2.0.32",
+    "@types/jasmine": "2.2.33",
+    "@types/node": "6.0.38",
     "@types/source-map": "0.5.0",
     "@types/uglify-js": "2.6.28",
-    "@types/webpack": "^1.12.34",
-    "angular2-hmr": "^0.8.1",
-    "autoprefixer": "^6.3.6",
-    "awesome-typescript-loader": "~2.2.1",
+    "@types/webpack": "1.12.34",
+    "angular2-hmr": "0.8.1",
+    "autoprefixer": "6.3.6",
+    "awesome-typescript-loader": "2.2.4",
     "better-npm-run": "0.0.12",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
+    "chai": "3.5.0",
+    "chai-as-promised": "5.3.0",
     "codelyzer": "1.0.0-beta.2",
-    "compression-webpack-plugin": "^0.3.0",
-    "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.1",
-    "cucumber": "^1.3.0",
-    "cucumber-tsflow": "^1.2.1",
-    "electron": "^1.4.3",
-    "electron-chromedriver": "^1.4.0",
-    "electron-prebuilt": "^1.4.3",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.9.0",
-    "http-server": "^0.9.0",
-    "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "json-loader": "^0.5.4",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coverage": "^0.5.5",
-    "karma-jasmine": "^0.3.8",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
+    "compression-webpack-plugin": "0.3.0",
+    "copy-webpack-plugin": "1.1.1",
+    "css-loader": "0.23.1",
+    "cucumber": "1.3.0",
+    "cucumber-tsflow": "1.2.1",
+    "electron": "1.4.3",
+    "electron-chromedriver": "1.4.0",
+    "electron-prebuilt": "1.4.3",
+    "exports-loader": "0.6.3",
+    "expose-loader": "0.7.1",
+    "file-loader": "0.8.5",
+    "html-webpack-plugin": "2.9.0",
+    "http-server": "0.9.0",
+    "imports-loader": "0.6.5",
+    "istanbul-instrumenter-loader": "0.2.0",
+    "json-loader": "0.5.4",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-coverage": "0.5.5",
+    "karma-jasmine": "0.3.8",
+    "karma-mocha-reporter": "2.0.0",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.7.0",
-    "merge": "^1.2.0",
-    "node-sass": "^3.4.2",
-    "parse5": "^1.3.2",
+    "merge": "1.2.0",
+    "node-sass": "4.5.1",
+    "parse5": "1.3.2",
     "phantomjs-polyfill": "0.0.2",
-    "phantomjs-prebuilt": "^2.1.6",
-    "postcss-loader": "^0.8.2",
-    "protractor": "^4.0.14",
-    "protractor-cucumber-framework": "^0.6.0",
+    "phantomjs-prebuilt": "2.1.6",
+    "postcss-loader": "0.8.2",
+    "protractor": "4.0.14",
+    "protractor-cucumber-framework": "0.6.0",
     "raw-loader": "0.5.1",
-    "remap-istanbul": "^0.5.1",
-    "rimraf": "^2.5.2",
-    "sass-loader": "^3.1.2",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.0",
-    "to-string-loader": "^1.1.3",
+    "remap-istanbul": "0.5.1",
+    "rimraf": "2.5.2",
+    "sass-loader": "3.1.2",
+    "source-map-loader": "0.1.5",
+    "style-loader": "0.13.0",
+    "to-string-loader": "1.1.3",
     "ts-helper": "0.0.1",
-    "ts-node": "^0.7.0",
-    "tslint": "^3.6.0",
-    "tslint-loader": "^2.1.3",
-    "typedoc": "^0.3.12",
-    "typescript": "~2.0.2",
+    "ts-node": "0.7.0",
+    "tslint": "3.6.0",
+    "tslint-loader": "2.1.3",
+    "typedoc": "0.3.12",
+    "typescript": "2.0.2",
     "typings": "1.3.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^0.8.4"
+    "url-loader": "0.5.7",
+    "webpack": "1.12.14",
+    "webpack-dev-server": "1.14.1",
+    "webpack-md5-hash": "0.0.5",
+    "webpack-merge": "0.8.4"
   },
   "repository": {
     "type": "git",
